/* د علامه انصاري تصنیفات */

--- a/مولانا_منصور_انصاري.mw
+++ b/مولانا_منصور_انصاري.mw
@@ -24,7 +24,7 @@
 ==د افغانستان سیاست کې ونډه==
 [[Image:Alama mansour ansari.jpg|left|thumb|200px| علامه مولانا منصور انصاري او د افغاني سفارت غړي په تركيه كې]]
 
-==د علامه انصاري تصنیفات==
+==چاپ شوي آثار==
 
 [[Image:له ښي خوا علامه مولانا منصور، د لغمان ملا او وزير محمد ګل خان (مومند بابا).JPG|left|thumb|200px|له ښي خوا علامه مولانا منصور، د لغمان ملا او وزير محمد ګل خان (مومند بابا]]
 
@@ -32,13 +32,7 @@
 
 # انواع الدول و حریت الملل: چې د هند د بجنور په مدینه چاپځای کې چاپ شوې دی.
 # حکومت الهي یا امامت امت: دا هم چاپ شوې دی.
-#  احتیاج انسان به قرآن عظیم الشان: ناچاپ
-# جمع و تدوین قرآن مبین: ناچاپ
-# منصب خلافت: ناچاپ
-# ایا اسلام مسلک است؟: ناچاپ
 # اساس انقلاب: چې د هند په مراد اباد کې چاپ شوې.
-# حقوق الکفار: ناچاپ
-# بیعت تابعیت: ناچاپ
 # حکومت الهي: په اردو ژبه 
 # د حضرت شاه ولي الله پر (فوز الکبیر) لمنلیکنه.
 #  تفسیر سوره فاتحه: په دري ژبه
@@ -46,11 +40,17 @@
 # وقت کا وظیفه اصلاح فرد کیلی ایک فارمول.
 # خودی و بې خودی.
 # اسلام و حقوق مسلمین.
+
+== ناچاپه آثار ==
+#  احتیاج انسان به قرآن عظیم الشان: ناچاپ
+# جمع و تدوین قرآن مبین: ناچاپ
+# منصب خلافت: ناچاپ
+# ایا اسلام مسلک است؟: ناچاپ
+# حقوق الکفار: ناچاپ
+# بیعت تابعیت: ناچاپ
 # تشکیل شاهي الهي: ناچاپ.
 
-
-
-
+== نندارتون ==
 <gallery>
 Image:Mansour_Ansari_and_Afghan_ammbasedor_in_Turkey.jpg|Caption1
 Image:Maulana_Qari_Thaib.jpg|Caption2
