--- a/لطف_الله_مشعل.mw
+++ b/لطف_الله_مشعل.mw
@@ -26,3 +26,4 @@ http://usa.mediamonitors.net/headlines/the_need_for_media_re_establishment_in_po
 http://www.csmonitor.com/2002/0308/p01s04-wosc.html
 
 [[Category: پښتانه شاعران]]
+[[Category: پښتانه]]
