*Empty MediaWiki Message*

--- a/نوروز_منگل.mw
+++ b/نوروز_منگل.mw
@@ -1,3 +1,4 @@
+[[انځور:نوروز_منګل.jpg|tumb|نوروز منګل]]
 د ملي لوبډلې کپتان ، په ښي لاس بيټينگ او ورو بالينگ کوي
 
 د ١٩٨٤ کال د نومبر په ٢٨ نېټه په کابل کې زيږدلى دى ، اصلآ د خوست اوسيدونکى دى
@@ -14,4 +15,3 @@
 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:نوروز_منګل.jpg]]
