*Empty MediaWiki Message*

--- a/نوروز_منگل.mw
+++ b/نوروز_منگل.mw
@@ -1,4 +1,4 @@
-[[انځور:نوروز_منګل.jpg|tumb|نوروز منګل]]
+[[انځور:نوروز_منګل.jpg|thumb|289px|نوروز منگل]]
 د ملي لوبډلې کپتان ، په ښي لاس بيټينگ او ورو بالينگ کوي
 
 د ١٩٨٤ کال د نومبر په ٢٨ نېټه په کابل کې زيږدلى دى ، اصلآ د خوست اوسيدونکى دى
@@ -15,3 +15,4 @@
 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
+[[وېشنيزه:پښتانه]]
