*Empty MediaWiki Message*

--- a/احمد_شاه_احمدي.mw
+++ b/احمد_شاه_احمدي.mw
@@ -9,4 +9,7 @@
 په څلورم پړاو کې احمد شاه له ايټاليا سره ٥٢ منډې وکړې خو په لوبيز ژوند کې يې تر ټولو ډيرې منډې ٧٣ دي . احمد شاه احمدي په ٢٠٠٤ کال کې له نيپال سره په يوه لوبه کې پنځه لوبغاړي هم سوځلي و .
 
 احمد شاه احمدي تر اوسه د افغانستان لپاره ٤٠٩ منډې د ٢٤.٠٥ په اوسط کې کړي دي . دۀ د ١٤.٥٠ په اوسط ٢٦ کسان هم سوځولي دي ، د احمد شاه تر ټولو غوره بالينگ د ١٧ منډو په بدل کې د درو کسانو سوځول و . 
+
+
 [[وېشنيزه:د کرکټ ملي لوبډله]]
+[[وېشنيزه: پښتانه]]
