--- a/مولانا_منصور_انصاري.mw
+++ b/مولانا_منصور_انصاري.mw
@@ -50,7 +50,7 @@
 # بیعت تابعیت: ناچاپ
 # تشکیل شاهي الهي: ناچاپ.
 
-== نندارتون ==
+== انځورونه==
 <gallery>
 Image:Mansour_Ansari_and_Afghan_ammbasedor_in_Turkey.jpg|Caption1
 Image:Maulana_Qari_Thaib.jpg|Caption2
