--- a/محمد_آصف_صميم.mw
+++ b/محمد_آصف_صميم.mw
@@ -13,10 +13,10 @@
 [[Image:SAMIM SEB AND ABDULLAH BAKHTANI.jpg|left|thumb|289px]]
 
 == زده كړې ==
-لومړې ټولګې مې د شينوارو په غني خېلو او پاتې نور مې تر اتمه د كامې په مراد علي لېسه كې ولوستل، بيا مې د كونړ عمراخان لېسې ته بدلونه پاڼه واخېسته، د لمس تر نيمايي مې هلته ولوست، د ۱۳۴۷ز په چنګاښ كې رحمان بابا لېسې ته لاړم، خو په پاتې نيم ښوونيز كال كې مې سم پوره نكړاى شو، له تا نه څه پرده، بس ګونډه مې ووله، د يو كلن ښوونيز زيان د تلافۍ لپاره د ۱۳۴۷ز په پاى كې بېرته مرادعلي لېسې ته راغلم، مخې كال ته مې يوولسم پېل كړ، يو څو مياشتې مې لا نه وى تېرې كړې، چې د اور يوې سختې پېښې مې ارمانونه لوخړه كړل، او بيا يې يو كال له درسه وايستم. تر يو څه نسبي روغتيا وروسته مې يوولسم بيا له سره كړ، د ۱۳۵۰ل د تلې مياشت كې د جلالكوټ ، (ننګرهار لېسې) دولسم ته بلونپاڼه يووړه، څه به دې سر خوږوم، خو تر ډېرې ستومانۍ وروسته د ۱۳۵۱ل په وږي مياشت كې ترې په وروستۍ درجه په ډېر خير راووتم.
+لومړې ټولګی ېې د شينوارو په غني خېلو او پاتې نور ېې تر اتمه د كامې په مراد علي لېسه كې ولوستل، بيا ېې د كونړ عمراخان لېسې ته بدلونه پاڼه واخېسته، د لسم تر نيمايي ېې هلته زده کړه وکړه، د ۱۳۴۷ز په چنګاښ كې رحمان بابا لېسې ته لاړ، خو په پاتې نيم ښوونيز كال كې ېې سم پوره نكړاى شو، له تا نه څه پرده،پخپله محمد اصف صميم وايي! بس ګونډه مې ووهله، د يو كلن ښوونيز زيان د تلافۍ لپاره د ۱۳۴۷ز په پاى كې بېرته مرادعلي لېسې ته راغلم، مخې كال ته مې يوولسم پېل كړ، يو څو مياشتې مې لا نه وى تېرې كړې، چې د اور يوې سختې پېښې مې ارمانونه لوخړه كړل، او بيا يې يو كال له درسه وايستم. تر يو څه نسبي روغتيا وروسته مې يوولسم بيا له سره كړ، د ۱۳۵۰ل د تلې مياشت كې د جلالكوټ ، (ننګرهار لېسې) دولسم ته بلونپاڼه يووړه، څه به دې سر خوږوم، خو تر ډېرې ستومانۍ وروسته د ۱۳۵۱ل په وږي مياشت كې ترې په وروستۍ درجه په ډېر خير راووتم.
 
 === لوړې زده كړې ===
-استاد صمېم صېب  ۱۳۵۲ل كال د وري مياشت كانكور ازموينې كې د كابل پوهنتون د ادبياتو او بشري علومو پوهنځي په عربي څانګې ته بريالې او د ۱۳۵۶ل كال د جدي په مياشت كې د لنسان درجې زده كړې پاى ته ورسولې. 
+استاد محمدآصف صمېم  ۱۳۵۲ل كال د وري مياشت كانكور ازموينې كې د كابل پوهنتون د ادبياتو او بشري علومو پوهنځي په عربي څانګې ته بريالې او د ۱۳۵۶ل كال د جدي په مياشت كې د لنسان درجې زده كړې پاى ته ورسولې.
 
 == دندې ==
 آصف صميم لكه څرنګه چې يې له ټنډې ښكاري د دولتي دندو چندانې شوقي نه ښكاري، خو بيا يې هم د دولت په چوكاټ كې ځينې دندې ترسره كړي، چې دلته به يې په لڼد ډول سره راوړو:
