/* د استاد محمد اصف صميم په اړه شهرت ننګيال داسې ليكي */

--- a/محمد_آصف_صميم.mw
+++ b/محمد_آصف_صميم.mw
@@ -5,10 +5,10 @@
 زه د خپل پلار (څښتن دې عمر وركا) له خولې په ۱۳۳۱لمريز كې په كامه كې زېږېدلې يم، پلار مې د خپل رسمي حيثيت په رڼا كې چې ټول عمر يې د پوهنې په مختلفو  ډګرونو كې په خدمت تېر كړې دى، زه ډېر كمكې (پينځه كلن) ښوونځي ته ولېږلم، په ښوونځي كې مې استقرار هم د هغوي له رمسي وظيفې سره موازي ؤ، او زيات كوښښ به يې دا ؤ، چې ترخپلې څارنۍ  لاندې راباندې درس ولولي.
 
 == د استاد محمد اصف صميم په اړه شهرت ننګيال داسې ليكي ==
-صميم صاحب صميمي او اشنا پال ځوان دى، روانه او جاذبه طبع او شمېرلې حركات لري، خوږ ژبې، دراك او خليق ليكوال او د پاخه تنقيدي شعور خاوند دى. په عادي ليكونو كې هم چې ملګرو ته يې لېږي داسې خوندور عبارات او جملې كاروي چې د سړي زړه غواړي څو ځله يې تکرار كړي. 
-صميم صېب په نثر او نظم دواړو كې زړه وړونكې او مليح قلم لري.
-صميم صېب دومره سپن زړی دى، چې خالصه توګه هم رېښتيا ګڼي، خو يو كار پكې دى او هغه دا چې ډېر ژر او په معمولي او وړه خبره هم خپه وي. اوبيا يې خپلا كېدل هم څه آسانه کار ندي. 
-صميم صېب دومره شرمګير دى، دومره چې خپل دوستان يې د خپلې كوژدې په كارتونو كې د قران عظيم الشان د ختم په نامه راغوښتي وو.
+استاد محمد آصف صميم صميمي او اشنا پال ځوان دى، روانه او جاذبه طبع او شمېرلې حركات لري، خوږ ژبې، دراك او خليق ليكوال او د پاخه تنقيدي شعور خاوند دى. په عادي ليكونو كې هم چې ملګرو ته يې لېږي داسې خوندور عبارات او جملې كاروي چې د سړي زړه غواړي څو ځله يې تکرار كړي. 
+محمد آصف صميم په نثر او نظم دواړو كې زړه وړونكې او مليح قلم لري.
+محمد آصف صميم دومره سپن زړی دى، چې خالصه توګه هم رېښتيا ګڼي، خو يو كار پكې دى او هغه دا چې ډېر ژر او په معمولي او وړه خبره هم خپه وي. اوبيا يې خپلا كېدل هم څه آسانه کار ندي. 
+محمد آصف صميم دومره شرمګير دى، دومره چې خپل دوستان يې د خپلې كوژدې په كارتونو كې د قران عظيم الشان د ختم په نامه راغوښتي وو.
 
 [[Image:SAMIM SEB AND ABDULLAH BAKHTANI.jpg|left|thumb|289px]]
 
