/* څېړنيزې چلندلارې سره يوځای کول */

--- a/ټولنپوهنه.mw
+++ b/ټولنپوهنه.mw
@@ -90,6 +90,7 @@ The choice of a method in part often depends on the researcher's epistemological
 The relative merits of these research methodologies is a topic of much professional debate among practicing sociologists.
 
 ===څېړنيزې چلندلارې سره يوځای کول=== 
+په عملي بڼه ځينې ټولنپوهان ډول ډول څېړنيزې تيوريګانې او څېړندودونه يوځای کوي 
 In practice, some sociologists combine different research methods and approaches, since different methods produce different types of findings that correspond to different aspects of societies. For example, the quantitative methods may help describe social [[patterns]], while qualitative approaches could help to understand how individuals understand those patterns. 
 
 An example of using multiple types of research methods is in the study of the [[Internet]]. The Internet is of interest for sociologists in various ways: as a tool for [[social research|research]], for example, in using [[online]] [[questionnaire]]s instead of paper ones, as a discussion platform, and as a research topic. Sociology of the Internet in the last sense includes analysis of [[online communities]] (e.g. as found in [[newsgroups]]), [[virtual communities]] and [[Virtual World|virtual worlds]], organisational change catalysed through [[new media]] like the Internet, and societal change [[Bloc voting|at-large]] in the transformation from [[industrial society|industrial]] to [[informational society]] (or to [[information society]]). Online communities can be studied statistically through [[network analysis]] and at the same time interpreted qualitatively, such as though [[virtual ethnography]]. Social change can be studied through statistical [[demographics]] or through the interpretation of changing messages and symbols in online [[media studies]].
