--- a/قيام_الدين_خادم.mw
+++ b/قيام_الدين_خادم.mw
@@ -1,4 +1,4 @@
-[[دوتنه:Khadim 001.jpg]]
+[[Image:Khadim 001.jpg|thumb|300px|قيام الدين خادم]]
 
 '''قيام الدين خادم''' (زېږېدنه: ۱۲۷۴ ل. - مړينه: ۱۳۵۸ ل.) (''انګرېزي:Qyamudeen Khadem'') يو افغان ژورناليست، پياوړى [[ليكوال]]، ويښ [[شاعر]]، اديب او د فلسفي اندونو يو پوه عالم ؤ. نوموړی په پښتو ادب کې يو ځانګړی ځای لري او په همدې سبب هغه د پښتو ژبې او ادب د ځلانده ستورو څخه يو ستوری ګڼل کېږي. هغه د پښتو ژبې او ادب په باب په زړه پوري منظوم او منثور آثار ليكلي. د ادبي هلو ځلو تر څنګ نوموړی په سياست کې هم ښکېل وه او د ويښ زلميانو د ګوند د بنسټ ايښودونکو غړو له ډلې نه ؤ.
 
