*Empty MediaWiki Message*

--- a/سيد_رحمن_وگړپال.mw
+++ b/سيد_رحمن_وگړپال.mw
@@ -1,5 +1,27 @@
 <font face="Tahoma">
 د پښتو ژبې خوږ ژبى شاعر سيد رحمن وګړپال حبيب په كال ١٣٣٩ لمريز په كابل ولايت كې زېږېدلى دى. وروسته له دې چې د حبيبې لېسې څخه فارغ شو د روښان د ښوونكو روزنې په عالي مؤسسې كې شامل شو، ورسته له فراغت څخه د رحمن مېنې په ښونځي كې د ښوونكي په توگه وګمارل شو. كله چې په هېواد كې وضعه د امن له پولې څخه اوړي دى هم رسمي دنده پرېږدي او خپلې پلرنۍ دندې ته چې سوداګري ده مخ اړوي چې له هماغه وخته تر دې دمه په همدې دنده بوخت دى او اوس په مسكو كې د نورو مهاجرو افغانانو په څېر د هجرت شپې سبا كوي.
 
+د شعر يوه بېلگه يې داده :
+
+كمكى خيبر
+
+اشــــنا د تا غمونه  ټول  په  سر راسره  وړم           بېلګه به خپل ټوټې ټوټې ځيګر راسره وړم
+
+په كلي د ماښـــــــــــام كې  وركه  مينه  لټوم           دا ســــتا د مخ ډيوه به لكه لمر راسره وړم
+
+تر څــو چــې خــپله وركه مېـــنه نكړمه پيدا            كچكول د بهانې به در په در راســره وړم
+
+په ما د بدو ستــــــــرګو نــظر كله كړي اثــــر            زه هغه ســـــــپېلنى يم چې نظر راسـره وړم
+
+په غېږ كې د اغـــيارچې پاڼې پاڼې شولې ته           پرېشانه خاطرې دې له محضر راسره وړم
+
+له زلفو نه دې يو ويښته زما په واك كې را            په لوڅه ډډه ســـتا د حســن غر راسره وړم
+
+محشـــــــــر كې به په دغه نښه وپېژنې مــــــا          په لاس كې به نيولى زړه پرهر راســره وړم
+
+جنت له به درځمه خو په يو شـرط باندې زه           هوائې له خپل خړ كمكي خيبر راسره وړم
+
+
+
 
 [[Category: پښتانه شاعران]]
