*Empty MediaWiki Message*

--- a/سيد_رحمن_وگړپال.mw
+++ b/سيد_رحمن_وگړپال.mw
@@ -3,6 +3,25 @@
 
 د شعر يوه بېلگه يې داده :
 
+كمكى خيبر
+اشــــنا د تا غمونه  ټول  په  سر راسره  وړم       
+ بېلګه به خپل ټوټې ټوټې ځيګر راسره وړم
+په كلي د ماښـــــــــــام كې  وركه  مينه  لټوم    
+دا ســــتا د مخ ډيوه به لكه لمر راسره وړم
+تر څــو چــې خــپله وركه مېـــنه نكړمه پيدا        
+كچكول د بهانې به در په در راســره وړم
+په ما د بدو ستــــــــرګو نــظر كله كړي اثــــر          
+ زه هغه ســـــــپېلنى يم چې نظر راسـره وړم
+په غېږ كې د اغـــيارچې پاڼې پاڼې شولې ته        
+ پرېشانه خاطرې دې له محضر راسره وړم
+له زلفو نه دې يو ويښته زما په واك كې را           
+په لوڅه ډډه ســـتا د حســن غر راسره وړم
+محشـــــــــر كې به په دغه نښه وپېژنې مــــــا         
+ په لاس كې به نيولى زړه پرهر راســره وړم
+جنت له به درځمه خو په يو شـرط باندې زه           
+هوائې له خپل خړ كمكي خيبر راسره وړم
+
+
 
 
 [[Category: پښتانه شاعران]]
