*Empty MediaWiki Message*

--- a/سيد_رحمن_وگړپال.mw
+++ b/سيد_رحمن_وگړپال.mw
@@ -3,6 +3,20 @@
 
 د شعر يوه بېلگه يې داده :
 
+اباسينه
+
+د وطن د غرونو اوښـــكې  چېرې وړې د كابل سيـنه
+
+په لېــمو يې بدرګه كـــړه دې كې ځــي د وطن ميــنه
+
+ 
+
+موږ ته هېڅ نه دي راپاتې وطن وران خو دومره وكړه
+
+امانتـــــي زړه كې سـاته   زموږ اوښكې اباسيـــــنه
+
+
+
 
 
 
