*Empty MediaWiki Message*

--- a/سيد_رحمن_وگړپال.mw
+++ b/سيد_رحمن_وگړپال.mw
@@ -15,6 +15,45 @@
 
 امانتـــــي زړه كې سـاته   زموږ اوښكې اباسيـــــنه
 
+خيال
+
+ما چې په ځان واخيست تهمتونه ستا
+
+څه كه راكوي څوك پېغورونه ستا
+
+ 
+
+څنګه دې پېغور په ځان وانخلمه
+
+شونډې دې غوټۍ سترګې جامونه ستا
+
+ 
+
+مه ږده په زړګي مې د ملهم  پټۍ 
+
+پرېږده چې په كې وي پرهرونه ستا
+
+ 
+
+دومره خيال يې ساته ما خو دركړلو
+
+ډېر په كې پراته دي ارمانونه ستا
+
+ 
+
+شك راته پېدا شي يارانه كې دې
+
+كله چې راياد كړمه لوظونه ستا
+
+ 
+
+دې دنيا كې دغه را په برخه شو
+
+خيال كې جوړومه تصويرونه ستا
+
+
+
+
 
 
 
