--- a/سيد_رحمن_وگړپال.mw
+++ b/سيد_رحمن_وگړپال.mw
@@ -1,7 +1,7 @@
 <font face="Tahoma">
 د پښتو ژبې خوږ ژبى شاعر سيد رحمن وګړپال حبيب په كال ١٣٣٩ لمريز په كابل ولايت كې زېږېدلى دى. وروسته له دې چې د حبيبې لېسې څخه فارغ شو د روښان د ښوونكو روزنې په عالي مؤسسې كې شامل شو، ورسته له فراغت څخه د رحمن مېنې په ښونځي كې د ښوونكي په توگه وګمارل شو. كله چې په هېواد كې وضعه د امن له پولې څخه اوړي دى هم رسمي دنده پرېږدي او خپلې پلرنۍ دندې ته چې سوداګري ده مخ اړوي چې له هماغه وخته تر دې دمه په همدې دنده بوخت دى او اوس په مسكو كې د نورو مهاجرو افغانانو په څېر د هجرت شپې سبا كوي.
 
-د شعر يوه بېلگه يې داده :
+د شعر څوبېلگې يې دادي :
 
 اباسينه
 
@@ -14,6 +14,7 @@
 موږ ته هېڅ نه دي راپاتې وطن وران خو دومره وكړه
 
 امانتـــــي زړه كې سـاته   زموږ اوښكې اباسيـــــنه
+
 
 خيال
 
