*Empty MediaWiki Message*

--- a/محمد_اقبال.mw
+++ b/محمد_اقبال.mw
@@ -21,7 +21,7 @@
 |  اغېزمن کړي       =  .........
 }}
 
-'''علامه محمد اقبال''' دهند د نیمې وچې نامتو شاعر، فېلسوف، متفکر او د ختیځ نابغه تېر شوې.
+'''علامه محمد اقبال''' دهند د نیمې وچې نامتو شاعر، فېلسوف، متفکر او د ختیځ نابغه تېر شوى دى.
 
 
 == زوکړه ==
