--- a/غازي_مير_زمان_خان.mw
+++ b/غازي_مير_زمان_خان.mw
@@ -49,3 +49,10 @@
 * عبدالله غمخور، د افغانستان د آزادۍ شهسوار، د افغانان جريده، د١٣٧٩کال د سنبلې ٢٤مه، ٣ مخ.
 * Fire in Afghanistan, 1914-1929, Rhea Talley Stewart, 2nd Edition, 2000, USA
 * رويداد لويه جرگه دارلسلطنه، ١٣٠٣، مطبعه سنگى وزارت حربيه.
+
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:افغانان]]
+[[وېشنيزه:پښتانه غازيان]]
+[[وېشنيزه:د افغان-انګليس د جګړې اتلان]]
+[[وېشنيزه:افغاني غازيان]]
