*Empty MediaWiki Message*

--- a/غازي_مير_زمان_خان.mw
+++ b/غازي_مير_زمان_خان.mw
@@ -1,4 +1,4 @@
-د '''غازي مير زمان خان''' (١٨٦٩ ز.= ١٢٤٨هـ ل. - ١٣٠٧هـ ل.) نوم په افغانستان کې د انگريزانو سره د افغانانو په دريمې جگړې پورې نه شليدونکې مهم تړاو لري. په هيواد او خپلواکۍ مين دغه شخصيت د هغو محدودو کسانوپه ډله کې ؤو چې د هيواد د بشپړ استقلال د گټلو او ژورو بدلونونو په پړاو کې يې مهم او تاريخ جوړونکې رول درلود. ميرزمان خان د انگريزي استعمار سره د فطري دشمنۍ په وجه  د ځوانۍ له وخته د آزاد سرحد په سيمه کې د آزادي غوښتونکو جنگياليو سره نژدى اړيکي درلودې، د هغوې د پاڅون او جهاد ملاتړ يې کاوه، او خپلو جنگياليو ملگرو سره به يې د ديورند د کرغيړنې ليکې نه په اوختو سره د هغوې په  وسلوالو مبارزو کې عملي ونډه اخيسته. 
+د '''غازي مير زمان خان''' (''انګرېزي:Ghazi Mir Zaman Khan'') (١٨٦٩ ز.= ١٢٤٨هـ ل. - ١٣٠٧هـ ل.) نوم په افغانستان کې د انگريزانو سره د افغانانو په دريمې جگړې پورې نه شليدونکې مهم تړاو لري. په هيواد او خپلواکۍ مين دغه شخصيت د هغو محدودو کسانوپه ډله کې ؤو چې د هيواد د بشپړ استقلال د گټلو او ژورو بدلونونو په پړاو کې يې مهم او تاريخ جوړونکې رول درلود. ميرزمان خان د انگريزي استعمار سره د فطري دشمنۍ په وجه  د ځوانۍ له وخته د آزاد سرحد په سيمه کې د آزادي غوښتونکو جنگياليو سره نژدى اړيکي درلودې، د هغوې د پاڅون او جهاد ملاتړ يې کاوه، او خپلو جنگياليو ملگرو سره به يې د ديورند د کرغيړنې ليکې نه په اوختو سره د هغوې په  وسلوالو مبارزو کې عملي ونډه اخيسته. 
 
 == مخينه ==
 ميرزمان خان په ١٨٦٩ ميلادى (١٢٤٨ هجرى شمسى) کال کې د کنړ د لمټک په کلي کې د حاجي گلروز خان په کور کې سترگې وغړولې. د هغه غور نيکه محمد عمر خان د سپين غره د تيرا دسيمې مشر ؤو چې د قبيلوي شخړو او اختلافاتو په وجه يې خپل کلې "کوټ" پريښود او د کنړ د لمټک په سيمه کې ميشته شو.  
