--- a/سيد_رحمن_وگړپال.mw
+++ b/سيد_رحمن_وگړپال.mw
@@ -1,63 +1,18 @@
-<font face="Tahoma">
 د پښتو ژبې خوږ ژبى شاعر سيد رحمن وګړپال حبيب په كال ١٣٣٩ لمريز په كابل ولايت كې زېږېدلى دى. وروسته له دې چې د حبيبې لېسې څخه فارغ شو د روښان د ښوونكو روزنې په عالي مؤسسې كې شامل شو، ورسته له فراغت څخه د رحمن مېنې په ښونځي كې د ښوونكي په توگه وګمارل شو. كله چې په هېواد كې وضعه د امن له پولې څخه اوړي دى هم رسمي دنده پرېږدي او خپلې پلرنۍ دندې ته چې سوداګري ده مخ اړوي چې له هماغه وخته تر دې دمه په همدې دنده بوخت دى او اوس په مسكو كې د نورو مهاجرو افغانانو په څېر د هجرت شپې سبا كوي.
 
-د شعر څو بېلگې يې دادي :
-
-اباسينه
-
-د وطن د غرونو اوښـــكې  چېرې وړې د كابل سيـنه
-
-په لېــمو يې بدرګه كـــړه دې كې ځــي د وطن ميــنه
-
- 
-
-موږ ته هېڅ نه دي راپاتې وطن وران خو دومره وكړه
-
-امانت يې زړه كې سـاته   زموږ اوښكې اباسيـــــنه
-
-
-خيال
-
-ما چې په ځان واخيست تهمتونه ستا
-
-څه كه راكوي څوك پېغورونه ستا
-
- 
-
-څنګه دې پېغور په ځان وانخلمه
-
-شونډې دې غوټۍ سترګې جامونه ستا
-
- 
-
-مه ږده په زړګي مې د ملهم  پټۍ 
-
-پرېږده چې په كې وي پرهرونه ستا
-
- 
-
-دومره خيال يې ساته ما خو دركړلو
-
-ډېر په كې پراته دي ارمانونه ستا
-
- 
-
-شك راته پېدا شي يارانه كې دې
-
-كله چې راياد كړمه لوظونه ستا
-
- 
-
-دې دنيا كې دغه را په برخه شو
-
-خيال كې جوړومه تصويرونه ستا
+== د شعر يوه بېلګه ==
+<center>
+=== خيال===
+{{شعر}}
+{{ب|ما چې په ځان واخيست تهمتونه ستا|څه كه راكوي څوك پېغورونه ستا}}
+{{ب|څنګه دې پېغور په ځان وانخلمه|شونډې دې غوټۍ سترګې جامونه ستا}}
+{{ب|مه ږده په زړګي مې د ملهم  پټۍ|پرېږده چې په كې وي پرهرونه ستا}}
+{{ب|دومره خيال يې ساته ما خو دركړلو|ډېر په كې پراته دي ارمانونه ستا}}
+{{ب|شك راته پېدا شي يارانه كې دې|كله چې راياد كړمه لوظونه ستا}}
+{{ب|دې دنيا كې دغه را په برخه شو|خيال كې جوړومه تصويرونه ستا}}
+{{د شعر پای}}
+<center/>
 
 
 
-
-
-
-
-
-
-[[Category: پښتانه شاعران]]
+[[وېشنيزه: پښتانه شاعران]]
