--- a/۷_غويی.mw
+++ b/۷_غويی.mw
@@ -1,6 +1,25 @@
 {{غويی}}
+== پېښې ==
 د غويي اوومه د افغانستان په تاريخ کې يوه توره ورځ بلل کېږي. په همدې ورځ د افغانستان لومړنی ولسمشر سردار محمد داؤد خان د خلقي ګوند په کودتا کې د خپل د کورنۍ د ټولو غړو سره وژل کېږي او د افغانستان د دولت واک د کمونستانو لاس کې پرېوځي.
 
+
+
+== زېږېدنې ==
+
+
+
+== مړينې ==
+*[[۱۳۵۳]] کال کې د غويي په اوومه د افغانستان د جمهوري نظام بنسټ ايښودونکی او د افغانستان لومړی ولسمشر سردار محمد داود خان د خلقي او پرچمي ګوندونو په کودتا کې د خپلې کورنۍ سره يو ځای وژل کېږي او د افغانستان د دولت واک د کمونستي سياسي اندونو مشرانو لاس کې پرېوځي.
+
+
+== رخصتيانې ==
+
+
+== باندنۍ تړنې ==
+
+
+
+== سرچينې ==
 
 
 
