*Empty MediaWiki Message*

--- a/۷_غويی.mw
+++ b/۷_غويی.mw
@@ -9,7 +9,7 @@
 
 
 == مړينې ==
-*[[۱۳۵۳]] کال کې د غويي په اوومه د افغانستان د جمهوري نظام بنسټ ايښودونکی او د افغانستان لومړی ولسمشر سردار محمد داود خان د خلقي او پرچمي ګوندونو په کودتا کې د خپلې کورنۍ سره يو ځای وژل کېږي او د افغانستان د دولت واک د کمونستي سياسي اندونو مشرانو لاس کې پرېوځي.
+*[[۱۳۵۷]] - د غويي په اوومه د افغانستان د جمهوري نظام بنسټ ايښودونکی او د افغانستان لومړی ولسمشر سردار محمد داود خان د خلقي او پرچمي ګوندونو په کودتا کې د خپلې کورنۍ سره يو ځای وژل کېږي او د افغانستان د دولت واک د کمونستي سياسي اندونو مشرانو لاس کې پرېوځي.
 
 
 == رخصتيانې ==
@@ -25,4 +25,4 @@
 
 {{لمريزې مياشتې}}
 
-[[fa:اردیبهشت]]
+[[fa:۷ اردیبهشت]]
