*Empty MediaWiki Message*

--- a/۷_غويی.mw
+++ b/۷_غويی.mw
@@ -1,4 +1,5 @@
 {{غويی}}
+دا د هجري لمريز کال د غويي د مياشتې ۷مه ورځ او په پرله پسې ډول د کال ۳۸مه ورځ ده.  
 == پېښې ==
 د غويي اوومه د افغانستان په تاريخ کې يوه توره ورځ بلل کېږي. په همدې ورځ د افغانستان لومړنی ولسمشر سردار محمد داؤد خان د خلقي ګوند په کودتا کې د خپل د کورنۍ د ټولو غړو سره وژل کېږي او د افغانستان د دولت واک د کمونستانو لاس کې پرېوځي.
 
