*Empty MediaWiki Message*

--- a/۷_غويی.mw
+++ b/۷_غويی.mw
@@ -1,5 +1,5 @@
 {{غويی}}
-د غويي ۷مه ورځ د پيل شوي هجري لمريز کال پرله پسې ۳۸مه ورځ ده. د همدې کال د پيل نه ۳۸ ورځې شوي او د کال د پای ته رسېدو لپاره ۳۲۷ ورځې پاتې دي.  
+'''۷ غويی''' د پيل شوي هجري لمريز کال پرله پسې ۳۸مه ورځ ده. د همدې کال د پيل نه ۳۸ ورځې شوي او د کال د پای ته رسېدو لپاره ۳۲۷ ورځې پاتې دي.  
 == پېښې ==
 د غويي اوومه د افغانستان په تاريخ کې يوه توره ورځ بلل کېږي. په همدې ورځ د افغانستان لومړنی ولسمشر سردار محمد داؤد خان د خلقي ګوند په کودتا کې د خپل د کورنۍ د ټولو غړو سره وژل کېږي او د افغانستان د دولت واک د کمونستانو لاس کې پرېوځي.
 
