--- a/هېموسېدرين.mw
+++ b/هېموسېدرين.mw
@@ -11,7 +11,7 @@
 وسپنه د انسانانو په بدن کې په وينې او په ځيګر کې په يو ډول پروټين چې فېرېټين نومېږي زېرمه کېږي. په فېرېټين کې چې کوم ډول وسپنه موندل کېږي هغه د وسپنې(III) آکسايډ-هايډروآکسايډ په نامه يادېږي. کله چې وسپنه د فېرېټين په بڼه وي نو هغه په اوبو کې د حل کېدو وړتيا لري.
 
 == پاتوفيزيولوژي ==
-هېموسېډرين اکثراً د وينې د بهېدو يا وينې کېدو<ref name="urlForensic Pathology"> نه وروسته رامېنځ ته کېږي. کله چې وينه له يوه ټپي شوي رګ نه بهېږي، نو سلولونه مړه کېږي او د وينې د سره توکو هېموګلوبين د سلولونو نه دباندې فضا ته لار مومي. د وينې د سپينو توکو يو ډول سلولونه چې ماکروفېجونه نومېږي، د فاګوسايټوسز د پروسې له مخې همدا هېموګلوبين د خپل غورځنګ لاندې نيسي او د هيموګلوبين په ټيټه کچه بدلون مومي او په نتيجه کې هېموسيدرين او پورفيرين رامېنځ ته کېږي.
+هېموسېډرين اکثراً د وينې د بهېدو يا وينې کېدو نه وروسته رامېنځ ته کېږي. کله چې وينه له يوه ټپي شوي رګ نه بهېږي، نو سلولونه مړه کېږي او د وينې د سره توکو هېموګلوبين د سلولونو نه دباندې فضا ته لار مومي. د وينې د سپينو توکو يو ډول سلولونه چې ماکروفېجونه نومېږي، د فاګوسايټوسز د پروسې له مخې همدا هېموګلوبين د خپل غورځنګ لاندې نيسي او د هيموګلوبين په ټيټه کچه بدلون مومي او په نتيجه کې هېموسيدرين او پورفيرين رامېنځ ته کېږي.
 
 == هغه ناروغۍ چې د هېموسېډرين د راغونډېدو سبب ګرځي ==
 د بدن په هغه ناروغيو کې چې وسپنه له نورمالې کچې لوړېږي د هېموسېډرين د راغونډېدو شونتيا ډېروي. دا داسې اوږدمهالې ناروغۍ دي چې اکثراً د وينې د ورکړې اړتيا په کې وي، لکه د سېکل سلول د وينې د کمښت ناروغۍ او تالاسېميا.
