/* د شعر يوه بېلګه */

--- a/حبيب_الله_زړه_سواند.mw
+++ b/حبيب_الله_زړه_سواند.mw
@@ -25,7 +25,9 @@
 #ګل شو پاڼې پاڼې د څلوريځو ټولګه
 
 == د شعر يوه بېلګه ==
-<center>زموږ د کلي لارې{{شعر}}
+<center>
+=== زموږ د کلي لارې ===
+{{شعر}}
 {{ب|په سرو وينو تکې سرې دي اوس زموږ د کلي لارې|بې ملنګه هديرې دي اوس زموږ د کلي لارې}}
 {{ب|ته له ما نه پکې ورک شوې، زه له تا نه پکې ورک شوم|خونړۍ غوندې تيارې دي اوس زموږ د کلي لارې}}
 {{ب|تېروو راتېروو پرې جنازې د ځوانيمرګو|بوله جوړې تاترې دي اوس زموږ د کلي لارې}}
