*Empty MediaWiki Message*

--- a/تاجيکستان.mw
+++ b/تاجيکستان.mw
@@ -2,6 +2,7 @@
 |اصلي نوم  = {{unicode|ҷумҳурии Тоҷикистон}}
 |conventional_long_name =Republic of Tajikistan
 |عام نوم =Tajikistan 
+ازادي .. ۱۹۹۲ز له متحده روسيې نه
 |بېرغ = Flag of Tajikistan.svg
 |نښان =Tajikistan coa.png
 |symbol_type =Coat of Arms
@@ -19,6 +20,7 @@
 |leader_name2 = [[Okil Okilov]]
 |area_rank = 95th
 |area_magnitude = 1 E11
+۱۹۹۲ ز له سويت يونين [[د ازادۍ کال ]]
 |مساحت=143,100
 |areami²= 55,251 
 |د اوبو سلنه = 0.3
