--- a/خان_عبدالولي_خان.mw
+++ b/خان_عبدالولي_خان.mw
@@ -20,7 +20,7 @@
 *'''د ګوند مشر'''
 |}
 
-<font face="Pashto Kror Asiatype">
+
 خان عبدالولي خان په ١١ د جنورۍ، کال ١٩١٧ کې پېدا شوی، دی د مرحوم [[خان عبدالغفارخان|خان عبدالغفار خان]] ځوی او د [[پښتو]] ژبې فلسفي شاعر [[غنى خان|خان عبدالغني خان]] ورور دی. که څه هم چې دده د شخصيت په اړوند د بېلابېلو فرقو خپلې ځانګړې څرګندونې دي او آن دا چې د [[پاکستان]] په سياست کې ځينې وخت په ده باندې ګوت نيونه شوې او يو ناندريزه شخص بلل شوی خو پدې وروستيو کې د هغه مړينې نه وروسته ټولو په سياست کې د هغه ونډه منلې ده او قدر يې کړی دی، که هغه نه پُخلا کېدونکې سياسي رقيبان او يا هم د ده دُښمنان دي. 
 ولي خان  د ډېرو 
 
@@ -28,15 +28,11 @@
 
 He lived for most of his life under the shadow of his influential father [[Badshah Khan]], as a result his families close links with the Indian government and nationalist/communist Afghan governments led to the acusation of being a traitor. Although no charge was ever proven, his support for issues like provincial rights and democratic expression were perceived by Pro Military supporters as additional signs of his "anti-Pakistani activities".
 
-
-<font face="Pashto Kror Asiatype">
 مرحوم ولي خان د اسيا د لوي سياسي مشر او په سيمه کې د عدم تشدد د سياسي پاليسۍ مخکښ او د خدايي خدمتګارانو د پښتني غورځنګ د بانی مرحوم خان عبدالغفار خان (پاچا خان) زوي وو. د ولي خان پلار چې د پښتنو د حقوقو لوي مدافع وو او له برتانوي، پنجابي او بنسټپاله ښکيلاک څخه يې د پښتنو د ازادۍ لپاره ډيرې هلې ځلې او منډې ترړې وکړې، پر خاني فقيري غوره و بلله او د قام په ننګ يې د ژوند ډېر سهارنه او ماښامونه د فرنګيانو او پنجابيانو په جيلونو کې تېر کړل او خپلې کورنۍ ته يې د پښتو پالنه په ميراث کې پرېښې وه٠مرحوم ولي خان د خپل پلار په پله ډير مزل وکړ، خو د پنجابي استعمار او سياسي اړودوړ تورو ګردونو او تيارو ترې لاره ورکه کړه او د ازاد او خپلواک پښتونستان خوب او ارمان يې د قبر تورو تيارو ته له ځانه سره يوړو
 ولى خان په خپل ٦٠ کلن سياسي ژوند کې په دوه پړاونو کې سياست کړى وو لومړى پړاو يې د خپل پلار باچا خان تر مشرۍ لاندې د هند د ملي کانګرس ګوند په ملګرتيا له نيمې وچې څخه د انګريز ښکېلاک له مېنځه وړل وو او دويم پړاو يې په ١٩٤٧ کال کې د پاکستان تر جوړېدو راهېسته په هيواد کې د پښتنو او نورو قومونو د حقونو تر لاسه کول وو.ولى خان په ١٣ کلنۍ يعنې په کال ١٩٣٠ کې هغه وخت په سياسي ډګر کې پښه کېښودله کله چې د ده پلار خان عبدالغفار خان د انګريزانو پر ضد د مبارزې په مهال زنداني شو او نوموړي په خپل پلرني ټاټوبي چارسده کې د انګريز ښکېلاک پر ضد وړو وړو احتجاجي غونډو ته ويناوې پېل کړې
 
 
 == د ولي خان پخوانی ژوند ==
-
-
 ٨٩ کلن خان عبدالولى خان په پېښور کې د پنجشنبې په ورځ ( د سلواغې ٦ د جنوري ٢٧ ) په حق ورسېد. نوموړى د سيمې په ناندريزو سياستوالانو کې تر ټولو ناندرېز وو چې له يو خوا د هند، روسىې او افغانستان د جاسوس تورونه ورباندې لګېدل نو له بلې خوا د مذهبي ګوندونو له خوا د کفر له فتواو سره مخامخ وو. ولى خان په خپل ٦٠ کلن سياسي ژوند کې په دوه پړاونو کې سياست کړى وو لومړى پړاو يې د خپل پلار باچا خان تر مشرۍ لاندې د هند د ملي کانګرس ګوند په ملګرتيا له نيمې وچې څخه د انګريز ښکېلاک له مېنځه وړل وو او دويم پړاو يې په ١٩٤٧ کال کې د پاکستان تر جوړېدو راهېسته په هيواد کې د پښتنو او نورو قومونو د حقونو تر لاسه کول وو. ولى خان په ١٣ کلنۍ يعنې په کال ١٩٣٠ کې هغه وخت په سياسي ډګر کې پښه کېښودله کله چې د ده پلار خان عبدالغفار خان د انګريزانو پر ضد د مبارزې په مهال زنداني شو او نوموړي په خپل پلرني ټاټوبي چارسده کې د انګريز ښکېلاک پر ضد وړو وړو احتجاجي غونډو ته ويناوې پېل کړې. نوموړى په ١٩٤٢ کال کې په لومړي ځل د انګريزانو له خوا بندي شو کله چې يې د کانګرس ګوند د " انګرېزانو هند څخه ووځئ " تر شعار لاندې د تحريک په لړ کې په احتجاج بوخت وو. د پاکستان د جوړويدو وروسته په هيواد کې د قومونو د حقوقو، ډېموکراسي، د بې پرې بهرنۍ تګلارې پر ضد د سياسي هلو ځلو په ترڅ کې په وارې وارې زندان ته واچول شو ولي خان ډېر اصولي، پوه او خپلو سياسي اهدافو ته هوډمن سياستوال بلل کېدۀ. خپله ولي خان ادعا کوله چې د پاکستان واکمنو لکه سکندر مرزا، ايوب خان او جنرال ضياء الحق د حکومتي چوکيو وړانديز ورته کړى وو خو په دې اساس يې دا وړاندېزونه رد کړل چې له پټې لارې څخه يې واک ته رسېدل نه غوښتل. دى د پاکستان تر جوړېدو يو کال وروسته بندي شو او په ١٩٥٤ کال کې خوشي شو او له دې وروسته يې د بلوڅانو، سنديانو او د هغه وخت ختيځ پاکستان چې اوس بنګله دېش دى له کېڼ اړخو سياستوالانو سره په ګډه نېشنل عوامي ګوند جوړ کړ چې سياسي مرام يې په پاکستان کې د پوځي حکومت له مېنځه وړل، نوي انتخابات، بې پرې بهرنۍ تګلاره او په دين نه ولاړ دولت را مېنځته کول وو. نوموړي په ١٩٧٠ کال کې د پاکستان په لومړۍ ټولټاکنو کې د قامي او صوبايي اسمبلۍ غړى وټاکل شو او په قامي اسمبلۍ کې د ذوالفقار علي بټو د حکومت پر ضد يو پياوړى حزب مخالف مشر وو. نوموړي په ١٩٧١ کې د پاکستان د ماتېدو د مخنيوي لپاره پر ځانګړى توګه له لندن څخه د حکومت په خواست د بنګله دېش پلازمېنې ډاکې ته ورسېد چې ازادى غوښتونکى شېخ مجيب الرحمن خبرو اترو ته سلا کړي خو بريالى نه شو.
 
 په ولى خان باندې نژدې څلور وژونکې حملې وشوې خو په کې ژوندى پاتې شوى وو. په ١٩٧٥ کال کې د ده په ګوند ذوالفقار على بټو د دولت ضد فعاليتونو په وجه بنديز ولګول
@@ -155,7 +151,8 @@ Wali Khan passed away on the 26th of January 2006 after a long illness. True to 
 *[[خان عبدالغفار خان|بادشاه خان]]
 *[[سهېل-لوېديزه سرحدي ولايت]]
 
-[[Category:پاکستاني سياستپوهان]]
+[[وېشنيزه:پاکستاني سياستپوهان]]
+[[وېشنيزه:پښتانه]]
 
 [[de:Abdul Wali Khan]]
 [[en:Khan Abdul Wali Khan]]
