*Empty MediaWiki Message*

--- a/په_پښتو_کې_د_ياگانو_سمه_کارونه.mw
+++ b/په_پښتو_کې_د_ياگانو_سمه_کارونه.mw
@@ -101,7 +101,7 @@
 
 
 الف – په پښتو مفردو مونثو نومونو کې راځي، کېدى شي دا نومونه يا حقيقي مونث وي يا نا حقيقي، خو په لفظي ډول پرې دمونث اطلاق کېږي. لکه:<br>
-ځولۍ ، زمرۍ ، نړۍ ، ګلالۍ ، ډوډۍ ، څوکۍ ، او داسې نور...<br>
+ځولۍ ، زمرۍ ، نړۍ ، ګلالۍ ، ډوډۍ ، څوکۍ ، او داسې نور.......<br>
 ځولۍ ، زمرۍ ، نړۍ ، ګلالۍ ، ډوډۍ ، څوکۍ ، او داسې نور...<br><br>
 ب – د ځينو هغو نسبتي صفتونو دجمعې او مغيره حالت لپاره راځي چې په څرګنده (ي) پايته رسېدلي وي. لکه:<br>
 اصلي حالت<br>
