Emblem_of_Maghreb.svg

--- a/مراکش.mw
+++ b/مراکش.mw
@@ -239,7 +239,7 @@ Chaabi (''popular'') is a music consisting of numerous varieties which are desce
 *  [[Organisation of African Unity]] -  a co-founder in [[May 25]], [[1963]]. Withdrew [[November 12]], [[1984]].
 * [[Image:G77.jpg|30px]] [[Group of 77]] - since [[June 15]], [[1964]]
 * [[Image:Flag of OIC.svg|30px]] [[Organization of the Islamic Conference]] - since [[September 22]], [[1969]]
-* [[Image:Flag_of_Maghreb.svg|30px]] [[Arab Maghreb Union]] - since [[February 17]], [[1989]]
+* [[Image:Emblem_of_Maghreb.svg|30px]] [[Arab Maghreb Union]] - since [[February 17]], [[1989]]
 *  [[World Trade Organization]] - since [[January 1]], [[1995]]
 * [[Mediterranean Dialogue]] group - since [[February 1995]]
 *  [[major non-NATO ally]] - since [[January 19]], [[2004]]
