*Empty MediaWiki Message*

--- a/محمد_صديق_پسرلی.mw
+++ b/محمد_صديق_پسرلی.mw
@@ -1,2 +1,113 @@
 [[انځور:Pasarlay.jpg|thumb|250px|استاد محمد صديق پسرلی]]
+محمد صديق پسرلى؛ زموږ د پېر استاد او غزل سالار شاعر  
+
+لیکوال : صدیق الله بدر 
+
+كه څه هم محمد صديق پسرلى په اوسني پېر كې د هندي سبك لاروى شاعر گڼل كېږي، خو په شعرونو كې د جوت فكر او پيغام شتون، دى د يوې جلا لارې او سبك څښتن شاعر راپيژني، ځكه د ده شعر پر ښكلاييز اړخ سربېره جوت مانيز اړخ هم لري او دا هغه خصوصيت دى، چې ډېرى ادبپوهان يې د لويو شاعرانو خاصه او ځانګړنه په ګوته كوي. 
+
+كله چې د دغه استاد شاعر، شاعري له نظره تېروو پر كوم واقعيت، چې ډېر باوري كېږو هغه دا دى، چې دى يو فطري شاعر دى او شاعري يې په فطرت كې ګډه ده، دا خبره ځكه كوم، چې پخپله استاد پسرلى هم په همدې نظر دى او ښه شاعري هغه شاعري ګڼي، چې فطري وي: ((داسې ډېر خلك وينم، چې په ډېر كم عمر باندې شعر وايي او ډېر خلك دي، چې تر ډېره عمره يا كاله پورې كوښښ كوي، خو بيا هم يو شعر نه شي ويلاى. زه د دې خبرې طرفدار يم، چې بعضې خلك فطري شاعران دي او په لږ لوست او لږو معلوماتو ښه شيان ويلاى شي، خو بعضې خلكو ډېر تحصيل هم كړى وي، ډېر كوښښ هم كوي، ډېر زحمت هم وباسي، ان داسې خلك مې ليدلي، چې په يوه غزل باندې شپې او ورځې تېروي او بالاخره په ظاهره په غزل كې يې كوم نقص هم نه وي، خو ليكن هيڅ خوند نه لري او دا ځكه چې دى فطري شاعر نه دى.)) 
+
+د استاد پسرلي د شخصيت غوره ځانګړنه خاكساري او تواضع ده او له همدې كبله ده، چې ډېر ګوښه اوسېدل خوښوي او د شهرت پلوى نه دى. استاد پخپله د خپل شهرت لپاره څه نه دي كړي، خو شاعري يې د هغه د استادۍ او لويي شهادت وركوي. راځى چې څو شيبې د دغه استاد شاعر د ژوند هنداره وځلوو او د هغه انځور په كې وګورو: 
+
+محمد صديق پسرلى د ارواښاد رمضان خان زوى په ۱۳۰۷ لمريزكال د وري په مياشت كې د غزني د قره باغ په لويه كلا كې زېږيدلى او تر څلورم ټولګي پورې يې د كندز په خان اباد كې زده كړې كړې دي. په ۱۳۳۵ لمريز كال كې يې مطبوعاتو ته مخه كړې او پوره دوه كاله يې رسمي دندې ترسره كړې دي، كال نيم د پښتون غږ په مجله كې يې كار وكړ، بيا يې د مطبوعاتو د مستقلې ادارې په داخلي نشراتو كې دنده پيل كړه، خو كال وروسته يې د دغې دندې په پرېښودو له رسمي دندې سره هم مخه ښه وكړه. 
+
+پسرلى صاحب ډېر وړو و، چې د شعر او شاعرۍ ښاپيرۍ تر ګوتو ونيوه او كرار كرار يې د مينې سندربول كړ: (( كه مطلب له شاعرۍ نه دا وي، چې په وزن او قافيه برابرې جملې وي دا خو زما نه يادېږي، چې درې كلن او كه څلوركلن به وم، چې موزونې جملې مې له خولې وتلې، خو كه مطلب دا وي، چې مفهوم هم ولري او بل چا ته هم خوند وركړي او په ليكلو وارزي، نو دا شاعري مې له شپاړلس كلنۍ يا پنځلس كلنۍ نه شروع كړې ده.)) 
+
+لومړنى شعريې، چې د كاغذ پرمخ ليكلى دى يوه څلورېزه ده: 
+
+لاله ښكاره شو په يوه داغ باندې 
+
+ما پټ ساتلي تر پردو لاندې 
+
+نسيمه راشه زړګى مې واكړه 
+
+چې كړم داغونه خلكو ته وړاندې 
+
+تراوسه د دغه نوميالي شاعر او ليكوال د شعرونو او كيسو څو ټولګې چاپ او خپرې شوې دي. لومړنۍ مجموعه يې د كوكچې په نامه په ۱۳۳۰ كال په بدخشان كې چاپ شوې او په همدغه كال يې  د يوناني شاعرې بېلټس ترانې هم په نظم وژباړلې، چې د چاپ په ګاڼه وپسولل شوې. څه كم دېرش كاله وروسته، په ۱۳۶۱ كې د پاسني  په مستعار نامه د وطن وير په نوم د حماسي او انتقادي شعرونو ټولګه يې چاپ شوه. كال وروسته يې د ليوني باد په نامه د طنزونو ټولګه خپره شوه. "داسې هم وو" او "سره غالۍ" په نومونو د لنډو كيسو ټولګې يې د شپېتمو كلونو په اواسطو كې چاپ او خپرې شوې. بيا يې د نن، پرون او سبا په نامه د څلورنيم سوه بيتونو په شمېر يوه قصيده چاپ شوه. د شپيتمو كلونو په اواخرو كې د ټاګور ګيتانجلي پښتو كړې منظومه ژباړه يې خپره شوه. په همدغو كلونو كې د "زهرې" په نامه يوه منظومه يې او بيا د پسته اور په نامه د څلورېزو ټولګه يې چاپ او خپره شوه. تر دې وروسته استاد د ګڼو ليكوالو او شاعرانو په غوښتنه د خپلو غزلونو په خپراوي لاس پورې كړ. لومړى يې ماته شپيلۍ او بيا يې د نى كوڅه چاپ كړه، تېر كال يې لومړى د كوچى ملا په نامه ناول او ورپسې يې د لمركجاوه په نامه د نظمونو كتاب د چاپ په ګاڼه وپسولل شول. 
+
+استاد په ۱۳۵۹ كې پېښور ته مهاجر شو او د شپيتمو كلونو په اوايلو كې يې د سپيدې په نامه يوه مجله راوكښله، چې تر  ۱۳۶۴ لمريزه پورې په منظم ډول چاپېده، خو وروسته له چاپه پاتې شوه. بيا يې په دويم ځل په ۱۳۶۶ كې د دې مجلې په چاپ لاس پورې كړ او ورسره يې د افغان كلتوري ټولنې بنسټ هم كېښود. تر دې څه موده وروسته يې د افغان ادبي بهير بنسټ كېښود او د هغه مشري يې ومنله. په ۱۳۷۷ لمريز كې كډن كابل ته راغى او تراوسه په خپل كور كې په ادبي هڅو بوخت دى. 
+
+  
+
+د محمد صديق پسرلي شاعري له ګڼو ځانګړنو برخمنه ده، هم نازكخيالي په كې په څپو ده، هم حماسي ده، هم ژوند دى په كې او هم د لوړولو فكرونو او خيالونو لېږدونكې. 
+
+نوميالى ليكوال او محقق استاد حبيب الله رفيع په خپله سرېزه كې، چې د استاد د محمد صديق پسرلي د نى كوڅه پر ټولګه يې كښلې، پسرلى صاحب په افغانستان كې د نوې غزل موجد او مجدد راپېژني: ده غزل له خپلو ټولو فني او هنري ښكلاوو سره د عصر په غوښتنو سنبال او له ژونده مالامال كړ. تر دې وړاندې رفيع صاحب يوې بلې ممهمې موضوع ته هم اشاره كوي او ليكي، چې د پسرلي غزل د هندي سبك له ټولو نازكيو او باريكيو څخه برخمنه ده. يو زيات شمېر نور ادبپوهان هم په همدې نظر دي او پسرلى صاحب د هندي سبك پيرو ګڼي، خو يو شمېر نور بيا د پسرلي صاحب په شعر كې د نازكخيالى ترڅنګه، فكر ډېر جوت ارزوي او هغه د يوه ځانګړي مقام او خپل سبك خاوند ګڼي. شاعر او ليكوال لعل پاچا ازمون په همدې نظر دى: (( زما له نظره استاد محمد صديق پسرلى د پښتو په غزل كې د څومره والي او څرنګوالي له لحاظه د يوه ځانګړي مقام څښتن دى، ځانته ځانګړې لار لري، ځانته ځانګړى سبك لري. كه څه هم ځينې ليكوال په دې نظر دي، چې دى د هندي سبك پيرو دى، ولې ما چې تركومه ځايه د ده غزلې او شعرونه لوستي دي دا څركونه به هم په كې ښكاري، خو استاد پخپله د يوه ځانګړي سبك خاوند دى، د استاد پسرلي په شعر كې فكر كې هم شته، پيغام هم شته، كله چې د هندي سبك خبره كوو بيا په هغه كې د نازكخيالۍ نه هاخوا د فكر او پيغام مساله په كې دومره جوته توګه نه ښكاري، خو زموږ د استاد پسرلي په غزل او يا نورو قطعو كې، چې موږ يې لولو په ده كې فكر ښكاري، په ده كې پيغام ښكاري.)) 
+
+خو عبدالغفورليوال په معاصره شاعرۍ كې د استاد پسرلي شاعري د هندي سبك يوه بارزه او نوې ادامه بولي: ((د استاد پسرلي شاعري زما په نظر د هندي سبك د شاعرۍ يوه بارزه او نوې ادامه ده. هغه خصوصيتونه، ظرفيتونه، ځانګړنې او د ژبې د صنعتونو كارونه، چې په هندي شاعرۍ كې شته او هغه د افغانستان په معاصره شاعرۍ كې وڅېړو، زما په نظر يوازې او يوازې د استاد پسرلي په شاعرۍ كې تر ډېره بريده ښكاره ده.)) 
+
+د ډاكټر اكبراكبر په اند فكر او مقصديت د پسرلي صاحب د شعر لوى امتياز دى: (( د پسرلي صاحب په شعرونو كې ترټولو لويه خبره دا ده، چې د ده په شعر كې فكر او مقصديت وي. ده ټول شعرونه د يوه مقصد لپاره ليكلي، دا كه د ده غزلې دي او كه د ده نظمونه دي.)) 
+
+ازمون د پسرلي صاحب په شعر كې د يوې بلې ښكلا يادونه هم كوي او هغه دا چې د استاد شعر كلاسيكيت لري: (( د پسرلي غزلې، چې دي د كلاسيكيت څښتن دى. زما په ګمان د د ه غزل به ډېر اوږد عمر ولري، تل ترتله به يې خلك لولي او يوازينى علت يې دا دى، ده چې كومې غزلى ليكلې، كوم فكر او پيغام يې چې په غزل كې وړاندې كړى، دا تل ترتله او ابدي دي او لكه نن سبا، چې خلك د حميد بابا غزل لولي يا د كاظم خان شيدا غزل لولي، همدغسې به د پسرلي غزل هم اوږد عمر ولري او خلك به يې لولي. زما په فكر استاد پسرلى به په افغانستان كې لومړنى شاعر وي، چې د څومره والي او څرنګوالي له مخې يې د غزل پله درنه ده.)) 
+
+پوهنمل محمد اسماعيل يون هم ورته نظر لري او د پسرلي صاحب شاعري مقاومه او متداومه ګڼي او هغه ډول شاعري ورته وايي، چې ډېر عمر كوي: (( د پسرلي صاحب شاعري، متداومه او مقاومه شاعري ده، يعنې د زمان او مكان له حدودو بهر ده، په دې معنى، چې ډېر اوږد عمر لري او كه سړى د شعر د محتوياتو او د شعر د قوت په تناسب يې ګوري نو له كلاسيكي شاعرۍ سره يې مطرح كولاى شي، يعنې د ده په شاعرۍ كې د كلاسيكې شاعرۍ رنګ هم شته دى او د معاصرې شاعرۍ رنګ هم. سړى چې كله د پسرلي صيب شاعرۍ ته ګوري نو داسې فكر كوي، چې د كلاسيكې دورې د يوه ډېر قوي شاعر له شعرونو سره مخامخ دى، نو دى په خپل عصر كې يو كلاسيك دى، په دې معنى، چې په خپل عصر كې موثر دى، يعنې شعرونه يې موسمي نه دي، چې د وخت د بادونو په زور او فشار باندې ختم شي او له همدې كبله ده، چې د ده شاعري د زمان او مكان له حدودو بهر ده، يعني ډېر عمر دوام كولاى شي.)) 
+
+د پسرلي صاحب شاعري له ګڼو ځانګړنو برخمنه ده او همدغو ځانګړنو هغه د استادۍ مقام ته رسولى دى، استاد نجيب الله منلى د پسرلي صاحب دوه امتيازه يا دوې ځانګړنې دا په ګوته كوي، چې هم يې ژبه ژبه ده او هم يې شعر شعر دى: (( د صديق پسرلي شعر دوه امتيازه لري، يو يې شعر په پښتو دى او بل يې شعر شعر دى، په دې معنى، چې زموږ ځينې شاعران، چې شعر ليكي هغه شعري تخيل، هغه شعري ښكلا د دوى په ليكنو كې د تقليد په اوبو وړې ښكاري، چې د پسرلي په شعر كې هغه شته.)) 
+
+پيرمحمد كاروان يې په غزل كې د لذت او فكر د قوت او تړاو يادونه كوي: (( د ده په غزلونو كې يوه مساله، چې زما ډېره خوښېږي هغه دا ده، چې لذت په كې وي. زما ډېره خوښېږي، چې په هنري اثارو كې اول بايد لذت موجود وي، د لذت ترڅنګ بيا وروسته فكر، هغه نورې خبرې، د زمانې خبرې او د خپل وخت خبرې بايد په هنري انداز كې وي.)) 
+
+كاروان دا هم وايي، چې د پسرلي په شعر كې دردونه منعكس شوي او د زړونو د درد غوټه په كې سپړل شوې ده: (( پسرلي صاحب د پښتو ژبې يو لوى شاعر دى، د پسرلي صاحب په شاعرۍ كې يو خو زموږ د ټولنې دردونه منعكس شوي، بل د پسرلي صاحب په شاعرۍ كې ښكلاييز انداز په ډېر يو تغزلي، نغښتې او رنګين شكل كې راغلى دى.)) 
+
+منلى صاحب د پسرلي صاحب د شعرونو رنګيني دا ګڼي، چې په روانه او معياري پښتو ليكل شوي دي: (( د پسرلي شعر په ډېره روانه، سليسه او معياري پښتو ليكل شوى، كه څه هم چې پسرلى صاحب په خپل شعر كې محلي اصطلاحات كارولي دي او ان كله ناكله د ګرامر په برخه كې هم خپل شعر په خپله لهجه ليكي، مګر له دې سره سره د پسرلي شعر د پښتو د يوه معياري شعر يو ډېر لوړ مثال دى.)) 
+
+ليوال دغه شاعري د كلاسيكې او معاصرې شاعرۍ يو ګډ خوند او رنګ ارزوي: ((د استاد پسرلي د شعر يوه بله ځانګړنه دا ده، چې له معاصرو افكارو او معاصرو هنري ارزښتونو سره د كلاسيكو خصوصيتونو او هنرونو يو ګډ او مختلط رنګ لري. له بلې خوا كه په غزليزه شاعرۍ كې موږ د بېلابېلو فنونو رنګارنګۍ ته توجه وكړو زه فكر كوم، چې واقعا استاد پسرلى په دې برخه كې يو استاد شاعر دى او د ځوانو شاعرانو لپاره ښه سرلارى كېداى شي.)) 
+
+عبدالرحمن ومان نيازى د پسرلي صاحب په شعر كې نازكخيالي د پام وړ ګڼي او وايي، همدې ځانګړنې اړ كړى، چې بيدل ولولي: (( د پسرلي صاحب  نازكخيالي ډېره د پام وړ ده، يعنى د ده شعر زه وهڅولم، چې بيدل ولولم، ما ډېرې مجموعې كتلې، ډېر كم داسې وخت شوى، چې زه دې يوه مجموعه دوه درې واره ولولم، داسې وخت هم راغلى، چې ما د ده شعرونه څو وارې كتلي دي. دليل يې دا دى، چې د ده شعر، چې هر وارې ګورې يو بل خوند ترې اخلې، يعنى دا د ده د شعر يو عجيب خوند او كيفيت دى، يعنې يو اړخ نه لري، څو اړخه دى او همدا دليل دى، چې سړى يې په وار وار لولي.)) 
+
+ومان نيازى د پسرلي صاحب په شعر كې د فلكلوريكو مسايلو د رانغښتلو يادونه هم كوي او وايي، چې د فلكلور هغه خواوې يې رااخيستي دي، چې د نورو ورته پام نه دى شوى: (( ده فلكلور په خپلو شعرونو كې را اخيستى دى، په خپلو شعرونو كې يې هغه خوا را اخيستې ده، چې تراوسه نه ده ثبت شوې، نه ده ليكل شوې، هغه، ده كارولې ده. خو فلكلور يې داسې نه دى را اخيستى، چې ولس تاييد كړى وي او دى دې را اخيستى وي، ده خپل نظر هم په كې شامل كړى دى. زموږ د ولس ډېر شيان خوښ دي او يا يې تاييد كړي دي. د ده چې ښه نه دي ايسيدلي، هماغه د ولس فكر يې نه دى ورسره منلى او نه يې دى تاييد كړى، خو برخلاف يو څه ته چې ولس په ډېره كمزوري بڼه كتلې او ده ته، چې د منلو وړ دى، هغه يې په ډېر قوت را اخيستى دى.)) 
+
+د پسرلي صاحب شاعري يوه بله ځانګړنه، چې لري، هغه د معنى ژورتيا ده، چې سړى ډېر فكر كولو ته اړ باسي، استاد يون همدا خبره كوي: (( دا سطحي شاعري نه ده، چې په اول ځل ترې يو سړى خوند واخلي، علت يې دا دى، چې عام لوستونكى له هغه څخه ډېر خوند نه شي اخيستلاى يعنې د ده شعرونه د خواصو لپاره دي، د ده شعرونه د هغو كسانو لپاره دي، چې د شعر په ښكلاييز اړخ باندې ډېر پوهېږي او پخپله له شعر سره روږدي وي.)) 
+
+لېوال په غزل كې د فكر پالل د لويو شاعرانو خاصه ګڼي او وايي: (( تر ډېره حده غزل د فكري مسايلو د مطرح كولو لپاره يو تنګ قالب دى او ډېر ماهر شاعران او استاد شاعران كولاى شي، چې پيچلي فكري مسايل په غزل كې مطرح كړي، استاد پسرلى يو له همدغو شاعرانو څخه دى، څرنګه چې موږ فلسفي او فكري مسايل په غزل كې طرحه كړو، هغه يو څه پيچلي كېږي، ځكه چې قالب لڼد دى، تمثيل ډېر نه شي كېداى، تصوير ډېر نه شي كېداى، دا يوازې كلمات دي، چې سړى بايد هغه پيچلي فلسفي افكار په كې بيان كړي.)) 
+
+ځوان شاعر نذير احمد نذير، دغه ځانګړنه پېچلتيا بولي: (( د ده د شاعرۍ يوه ځانګړه دا ده، چې شاعري يې پيچلې ده، پيچلې شاعري نظر هغه ساده شاعرۍ نه ډېر خوند كوي، چې لوستونكى يو وار پرې پوه شي، كه چېرې شاعري پيچلې وي او ته هغه باندې غور وكړې او بيا وروسته د هغه په معنى باندې پوه شې، هغه به ډېر خوند وكړي، مثلا: 
+
+ تر سپينو تروو كم نه و دا سپين وېښته زما 
+
+پيرۍ راغله نشه مې د شرابو ماته شوه 
+
+ په دې باندې په لومړي ځل څوك نه پوهېږي، ولې كله چې په دې باندې غور وكړي پوهېږي، چې شومړې نشه الوځوي، خو دى وايي زما سپين وېښته ترسپينو شومړو كم نه وه. كله چې سپين وېښته مې په وجود كې راپيدا شول هغه د ځوانۍ نشه مې والوتله.)) 
+
+د لفظونو او كلماتو اوډون د شاعرۍ يو بېل خصوصيت دى، لوى او هنرمن شاعران دغه اوډون ته ډېر ارزښت وركوي او په ډېرو كمو لفظونو كې، ډېر مفاهيم افاده كوي. د پسرلي صاحب شعرونه په بشپړه توګه همدغه خصوصيت لري. نذير د همدغه خصوصيت يادونه داسې كوي: (( پسرلى صاحب د لفظونو په اوډن كې استاد دى، يعنې هغه څه چې غواړي رايې وړي هغه په داسې الفاظو كې راوړي، چې اورېدونكو او لوستونكو ته خوند وركوي او هغه مطلب مكمل په كې رسول كېږي، يعنى دى غواړي هغه الفاظ وكاروي، چې ډېر مطلب په كمو الفاظو كې راوړي، ڼو دى د دغو الفاظو په ټاكلواو راوړلو كې استاد دى.)) 
+
+ازمون دغه خصوصيت په شعر كې د موسقيت پر ځانګړنې پورې تړلى بولي او وايي: (( د الفاظو اوډونه او د الفاظو راوړنه او دې الفاظو ته موسيقت وركونه دا د ده د شعر يوه ځانګړنه ده، يعنې همدغه رواني ده، چې د ده شعر په خلكو باندې ښه لګېږي، الفاظ يې ډېر بې ځايه نه دي كارولي. مثلا له داسې ډېرو الفاظو نه د وزن په خاطر هم كله كار نه دى اخيستى، وزن د ده طبيعي دى، موسيقي يې طبيعي ده. داسې نه ده، چې مصنوعي جوړه شوې وې، دى په خپل غزل كې داسې نه دى. د ده د شعرموسيقيت، چې دى، يعنې داخلي موسيقي يې، چې ده پوره ده، هغه الفاظو ډېره ښكلې پوره كړې ده، يعنې دا د ده پر ژبه برلاسي ښيي، يعنې دا د ده د پښتني محاورې يا متلونو د استعمال قوت ښيي.)) 
+
+په شعر كې د كلماتو تكرار او بيا بيا كارونه ډېر ځله د شعر خوند او كيفيت ته تاوان رسوي، ډېر شمېر شاعران دي، چې دغه كار كوي او د خپل شعر خوند او رنګ ته زيان اړوي. د استاد پسرلي په شعرونو كې هم ځينې كلمات بيا بيا تكرارېږي، خو ځانګړنه يې په دې كې ده، چې هرځل په يوه نوې معنى او مفهوم كې راځي، نذير همدا خبره كوي: (( د استاد شاعري د موتيفونو د مرغلرو يو رنګين لړ دى. په دې معنى هغه الفاظ يا توري، چې ده ګټه ترې اخيستې ده يا ده په خپلې شاعرۍ كې كارولي دي لكه ستوري، سورى، حسن، مينه، پتنګ، شمع او داسې نور په نوي انداز راوړي دي. د مثال په ډول په سورى شعر كې، سورى د ده په يوه كتاب كې يعنى د نى په كوڅه كې ۱۲۲ ځله راغلى دى.  په دې ۱۲۲ ځله كې يوځل هم داسې نه دى راغلى، چې هغه دې د پخواني ځل سره تكرار راغلى وي. يعنې د ده برياليتوب په دې كې دى، هغه شيان چې دى غواړي ويې كاروي، هغه په نوي انداز باندې كاروي.)) 
+
+دا هم د استاد پسرلي هغه شعر، چې پورته يادې ځانګړنې په كې ځل وهي: 
+
+قفس ته كــــه مــــې واچــــوې بېباكه به درووځم 
+
+نــــاله به شـــم د خپل زړګي له چاكه به درووځم 
+
+د ســــترګو سياه مستې كه دې نور لږ لېونى كړم 
+
+له هـــــوشه به روپوش شم له ادراكه به درووځم 
+
+هغــــه وعده دې هېره شوه كه څنګه چې ويل دې 
+
+خــــوله بــــه د حيا شمـــه او پاكــــه به درووځم 
+
+كه ستا دعشق په لاره كې مې خاورې شول هډونه 
+
+انګــــور به شـــــم باده به شـم له تاكه به درووځم 
+
+ريدى به شمــــه داغ په زړه او سور كفن په غاړه 
+
+كــــه زمـــا بهاره راغلې نو له خاكه بـه درووځم 
+
+سپرلى به شم هرپل كه ږدې په غره او كه په سمه 
+
+ګــــلان به درنـــه ګـــرځوم بېــــواكه به درووځم 
+
+ تر دې ځايه زموږ بحث د استاد پسرلي د غزل په اړه و او هغه مو د غزل سالار شاعر په توګه وپېژانده، خو هغه يوازې د غزل شاعر نه دى، بلكې قصيدې، څلوريزې، نظمونه او منظومې يې هم ليكلي دي. په لنډو ټكو كې كه ووايو استاد پسرلي د شعر په ټولو قالبونو كې شاعري كړې او په ټولو كې يې د خپل شاعرانه قوت ثبوت وړاندې كړى دى. كاروان همدا خبره كوي: (( پسرلى صاحب غزل هم ليكي، قصيده هم ليكي او نظمونه هم. كه په ځير سره وګورو داسې ډېر كم شاعران پيدا كېږي، حتي كه ووايم ډېره ناممكنه ده، چې هغه دې په دې ټولو قالبونو كې خپل شعريت برقرار وساتي. موږ ته ډېر لوى لوى شاعران معلوم دى، چې هغوى به ښه غزل ليكي، مثلا حمزه بابا، چې واقعا د پښتو غزل عظيم شاعر دى، غني خان ډېر بهترين نظمونه لري، خو غني خان ورسره ترڅنګ غزل نه لري. حمزه بابا نظمونه ليكلي دي، خو د حمزه بابا ټول نظمونه، چې دي هسې نه دي لكه د هغه غزلې، خو پسرلى صاحب هغه شاعر دى، چې هم قصيده، هم غزل او هم هغه نور قافيه وال نظمونه په ډېر عجيب انداز ليكي.)) 
+
+يون هم په همدې نظر دى: (( له غزل پرته، څلورېزې يې دي، چې د ډېر فكر انتقالونكې دي، خو ډېره زياته ښكلا، چې ده هغه د ده په غزلونو كې پرته ده او تر هغه وروسته په څلورېزو كې يې دې ښكلا ته تم كېږو.)) 
+
+د پسرلي صاحب شعرونه له ګڼو نورو ښكلا او باريكيو هم برخمن دي او په كار ده، چې افغان كره كتونكي او ادبپوهان پخپلو څېړنو كې دغه ښكلاوې او ځانګړنې رابرسېره او د دغه حقدار او نوميالي شاعر حق په ځاى كړي. 
+
+ 
+
+ منبع: کلید
+
+
 [[وېشنيزه: پښتانه شاعران]]
