/* د تاليف او ترجمې د څانګې کارکوونکي */

--- a/پښتو_ټولنه.mw
+++ b/پښتو_ټولنه.mw
@@ -36,7 +36,7 @@
 د تاليف او ترجمې د ځانګې کارکوونکي پدې توګه وه.
 #عبدالغفور خان (د انګليسي ژبې ژباړونکی)
 #عبدالباقي خان لطيفي
-#احمد عليخان کهزاد
+#[[احمد علي کهزاد|احمد علي خان کهزاد]]
 #يعقوب حسن خان
 #عبدالواحد خان (د روسي ژبې ژباړونکی)
 #اورادالدين خان (د عربي ژبې ژباړونکی)
