/* د پښتو د لغت، صرف او نحوې د څانګې کارکوونکي */

--- a/پښتو_ټولنه.mw
+++ b/پښتو_ټولنه.mw
@@ -68,7 +68,7 @@
 === د پښتو د لغت، صرف او نحوې د څانګې کارکوونکي ===
 د پښتو د لغت، صرف او نحوې د څانګې کارکوونکي پدې توګه وه.
 #صالح محمد خان
-#[[استاد ګل پاچا الفت|ګل پاچا خان الفت]]
+#[[ګل پاچا الفت|ګل پاچا خان الفت]]
 د پښتو د لغت، صرف او نحوې د څانګې د دغو دوو کارکوونکو سره سره يو شمېر نور اداري کارکوونکي يې هم درلودل.
 په ١٣١٧ لمريز کال کې ددې لپاره چې پښتو ته ښه او بېړنی کار وشي د پښتو ټولنې ټول پښتو ژبې غړي د ژبې په مديريت کې سره يوځای کړل شول، مدير امين الله خان زمريالی وټاکل شو. انګرېزي مترجم ارجنداس کپور او اداري کاتب يې عبدالصمد خان و. دې مديريت د تاليف او ترجمې او د لغاتو او قواعدو دوې څانګې درلودې چې دا کسان پکې وو.
 #قيام الدين خادم
