/* پښتو ټولنه د ١٣١٨ نه تر ١٣٥٢ کلونو پورې */

--- a/پښتو_ټولنه.mw
+++ b/پښتو_ټولنه.mw
@@ -80,7 +80,7 @@
 چې په همدې کال يې د پښتو کلی ګانو د ليکلو او خپرولو وظيفه پيل کړه.
 
 == پښتو ټولنه د ١٣١٨ نه تر ١٣٥٢ کلونو پورې ==
-د ١٣١٨ کال په ژمي کې چې د مطبوعاتو مستقل رياست جوړ شو، او د پخواني ادبي انجمن څانګې ددې رياست جز شوی او ددې انجمن د ژبې مديريت د پښتو ټولنې په لوی مديريت واوښت لوی مدير يې د مطبوعاتو مرستيال استاد عبدالحی حبيبي وټاکل شو او دا وخت يې تشکيلات پدې ډول وو
+د ١٣١٨ کال په ژمي کې چې د مطبوعاتو مستقل رياست جوړ شو، او د پخواني ادبي انجمن څانګې ددې رياست جز شوی او ددې انجمن د ژبې مديريت د پښتو ټولنې په لوی مديريت واوښت لوی مدير يې د مطبوعاتو مرستيال استاد [[عبدالحی حبيبي]] وټاکل شو او دا وخت يې تشکيلات پدې ډول وو
 #د ژبې مديريت
 #د تاليف او ترجمې مديريت
 #د صحافت مديريت
@@ -90,7 +90,7 @@
 #ښاغلی [[استاد ګل پاچا الفت|الفت]]
 #ښاغلی [[استاد عبدالرؤف بېنوا|بېنوا]]
 #ښاغلی [[استاد صديق الله رښتين|رښتين]]
-#ښاغلی ترکی
+#ښاغلی تره کی
 #ښاغلی اوراد الدين
 #ښاغلی ايازی
 #ښاغلی نظامي
