/* پښتو ټولنه د ١٣١٨ نه تر ١٣٥٢ کلونو پورې */

--- a/پښتو_ټولنه.mw
+++ b/پښتو_ټولنه.mw
@@ -87,9 +87,9 @@
 #د قواعدو د کورسونو د تفتيش مديريت
 دا وخت يې غړي پدې توګه وه
 #ښاغلی زمريالی
-#ښاغلی [[استاد ګل پاچا الفت|الفت]]
-#ښاغلی [[استاد عبدالرؤف بېنوا|بېنوا]]
-#ښاغلی [[استاد صديق الله رښتين|رښتين]]
+#ښاغلی [[ګل پاچا الفت|الفت]]
+#ښاغلی [[عبدالرؤف بېنوا|بېنوا]]
+#ښاغلی [[صديق الله رښتين|رښتين]]
 #ښاغلی تره کی
 #ښاغلی اوراد الدين
 #ښاغلی ايازی
