/* پښتو ټولنه د ١٣١٨ نه تر ١٣٥٢ کلونو پورې */

--- a/پښتو_ټولنه.mw
+++ b/پښتو_ټولنه.mw
@@ -88,7 +88,7 @@
 دا وخت يې غړي پدې توګه وه
 #ښاغلی زمريالی
 #ښاغلی [[ګل پاچا الفت|الفت]]
-#ښاغلی [[عبدالرؤف بېنوا|بېنوا]]
+#ښاغلی [[عبدالروف بېنوا|بېنوا]]
 #ښاغلی [[صديق الله رښتين|رښتين]]
 #ښاغلی تره کی
 #ښاغلی اوراد الدين
