/* پښتو ټولنه د ١٣١٨ نه تر ١٣٥٢ کلونو پورې */

--- a/پښتو_ټولنه.mw
+++ b/پښتو_ټولنه.mw
@@ -122,7 +122,7 @@
 #د کابل د مجلې غړی عبدالرزاق خان زړور
 #د کورسونو د مديريت کفيل محمد ايوب خان مهمندی
 #د تحرير او توزيع مدير امان الله خان
-د ١٣٣٥ لمريز کال په پيل کې د کار د ښه توب او له پوهنې وزارت سره د پښتو ټولنې د زياتو اړيکو له مخې پښتو ټولنه د مطبوعاتو له رياست څخه جلا او د پوهنې له وزارت سره وتړل شوه. دا وخت د پښتو ټولنې رياست [[ګل پاچا الفت|استاد الفت]] ته وسپارل شو او همدا وخت د پښتو ټولنې غړو ته علمي رتبې ورکړی شوی او د پوهنتون په سويه يوه موسسه شوه، له باندنيو علمي موسسو سره يې اړيکې ټينګې شوې او د سفرونو له لارې پښتو ټولنې د نړۍ علمي موسسو ته ور وپېژندله شوه. په ١٣٣۷ کال کې د پښتو ټولنې مرستيال [[استاد عبدالشکور رشاد]] وو.<br>
+د ١٣٣٥ لمريز کال په پيل کې د کار د ښه توب او له پوهنې وزارت سره د پښتو ټولنې د زياتو اړيکو له مخې پښتو ټولنه د مطبوعاتو له رياست څخه جلا او د پوهنې له وزارت سره وتړل شوه. دا وخت د پښتو ټولنې رياست [[ګل پاچا الفت|استاد الفت]] ته وسپارل شو او همدا وخت د پښتو ټولنې غړو ته علمي رتبې ورکړی شوی او د پوهنتون په سويه يوه موسسه شوه، له باندنيو علمي موسسو سره يې اړيکې ټينګې شوې او د سفرونو له لارې پښتو ټولنې د نړۍ علمي موسسو ته ور وپېژندله شوه. په ١٣٣۷ کال کې د پښتو ټولنې مرستيال [[عبدالشکور رشاد]] وو.<br>
 د ١٣۴٢ لمريز کال په چنګاښ کې يو ځل بيا پوهاند [[ صديق الله رښتين|صديق الله رښتين]] د پښتوټولنې او ښاغلی عبدالله خدمتګار د پښتو ټولنې د مرستيال په توګه وټاکل شول. د کار د ښه توب لپاره د پخوانيو تشکيلاتو په ځای د فولکولور او ادب لوی مديريت، د اجتماعي علومو لوی مديريت او د خپرونو لوی مديريت منځ ته راغلل او د تدريساتو لوی مديريت په خپل نامه پاتې شو خو کارونه يې ښه او ګړندي شول.
 
 == د پښتو ټولنې له خوا ترسره شوي کارونه ==
